{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 75,
  "lineage": "5df8d73f-fffa-e3af-9508-aa8970e3df83",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "entrega1-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:564835583352:loadbalancer/app/entrega1-elb/8b0eb6188f4d3963",
            "arn_suffix": "app/entrega1-elb/8b0eb6188f4d3963",
            "dns_name": "entrega1-elb-1240340053.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:564835583352:loadbalancer/app/entrega1-elb/8b0eb6188f4d3963",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "entrega1-elb",
            "security_groups": [
              "sg-0f3d10ebe035fba5b",
              "sg-4ecd3670"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1ceb407a"
              },
              {
                "subnet_id": "subnet-7096222f"
              },
              {
                "subnet_id": "subnet-c80ff0f9"
              },
              {
                "subnet_id": "subnet-da7ccafb"
              },
              {
                "subnet_id": "subnet-e57b16eb"
              },
              {
                "subnet_id": "subnet-e6443fab"
              }
            ],
            "subnets": [
              "subnet-1ceb407a",
              "subnet-7096222f",
              "subnet-c80ff0f9",
              "subnet-da7ccafb",
              "subnet-e57b16eb",
              "subnet-e6443fab"
            ],
            "timeouts": {
            },
            "vpc_id": "vpc-4a6baf37",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:security-group/sg-4ecd3670",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-4ecd3670",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "564835583352",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Default"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-4a6baf37"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2-Security-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:security-group/sg-0f3d10ebe035fba5b",
            "description": "launch-wizard-1 created 2020-09-29T22:41:11.749-03:00",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3d10ebe035fba5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "launch-wizard-1",
            "name_prefix": "",
            "owner_id": "564835583352",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "EC2-Security-Group"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-4a6baf37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Main-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS-Security-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:security-group/sg-0f6314bb2cfa8e52b",
            "description": "database RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6314bb2cfa8e52b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f3d10ebe035fba5b"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "564835583352",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "RDS-Security-Group"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-4a6baf37"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:subnet/subnet-da7ccafb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "id": "subnet-da7ccafb",
            "map_public_ip_on_launch": true,
            "owner_id": "564835583352",
            "timeouts": {
            },
            "vpc_id": "vpc-4a6baf37"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:subnet/subnet-e57b16eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "id": "subnet-e57b16eb",
            "map_public_ip_on_launch": true,
            "owner_id": "564835583352",
            "timeouts": {
            },
            "vpc_id": "vpc-4a6baf37"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:subnet/subnet-c80ff0f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "id": "subnet-c80ff0f9",
            "map_public_ip_on_launch": true,
            "owner_id": "564835583352",
            "timeouts": {
            },
            "vpc_id": "vpc-4a6baf37"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:subnet/subnet-e6443fab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-e6443fab",
            "map_public_ip_on_launch": true,
            "owner_id": "564835583352",
            "timeouts": {
            },
            "vpc_id": "vpc-4a6baf37"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:subnet/subnet-1ceb407a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-1ceb407a",
            "map_public_ip_on_launch": true,
            "owner_id": "564835583352",
            "timeouts": {
            },
            "vpc_id": "vpc-4a6baf37"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:subnet/subnet-7096222f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-7096222f",
            "map_public_ip_on_launch": true,
            "owner_id": "564835583352",
            "timeouts": {
            },
            "vpc_id": "vpc-4a6baf37"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564835583352:vpc/vpc-4a6baf37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0e95ba73",
            "default_route_table_id": "rtb-cdecafb3",
            "default_security_group_id": "sg-4ecd3670",
            "dhcp_options_id": "dopt-1af49560",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4a6baf37",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-cdecafb3",
            "owner_id": "564835583352",
            "tags": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    }
  ]
}